Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-53464

[reg 5.5.1->5.6.0] PathView: Items before current not created in some cases

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.6.2
    • 5.6.0, 5.7.0 Beta
    • None
    • Ubuntu 15.04 64-bit
    • 273e5b0bdc1239df77e2e5694fdd5ad068595be3

    Description

      How to reproduce:
      1. Create PathView with current item in center
      2. Load it with currentIndex setted so that item with index 0 was after current item and before path end

      Result:
      Items from path begin to current item not created

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            srutledg Shawn Rutledge
            a.stolbov Anatoly Stolbov
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes